Added basic HTML and CSS. Vertical columns done with flex display currently. Bug exists where control panel column glitches to below other three columns. Will attempt to do vertical columns with a table instead and then will move forward with finishing html skeleton and adding js functionality.

--- a/SVANN_GUI.vcxproj
+++ b/SVANN_GUI.vcxproj
@@ -105,6 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\demos.win\sciter-dx;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -139,6 +140,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\demos.win\sciter-dx;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
