tis file is able to display data from memory c++ object

--- a/SVANN_GUI.vcxproj
+++ b/SVANN_GUI.vcxproj
@@ -151,6 +151,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="memory.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="sciter-sdk-master\demos.win\sciter-dx\stdafx.h" />
     <ClInclude Include="SVANN_GUI.h" />
