--- a/SVANN_GUI.vcxproj.filters
+++ b/SVANN_GUI.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="memory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="sciter-sdk-master\include\value.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SVANN_GUI.cpp">
