--- a/SVANN_GUI.vcxproj
+++ b/SVANN_GUI.vcxproj
@@ -105,7 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\include;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\libs;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\demos.win\sciter-dx;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Chase's Laptop\source\repos\SVANN_GUI\cereal-1.3.0\cereal-1.3.0\include\cereal\archives;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\cereal-1.3.0\cereal-1.3.0\include\cereal\types;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\include;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\libs;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\demos.win\sciter-dx;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -140,7 +140,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\include;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\libs;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\demos.win\sciter-dx;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Chase's Laptop\source\repos\SVANN_GUI\cereal-1.3.0\cereal-1.3.0\include\cereal\archives;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\cereal-1.3.0\cereal-1.3.0\include\cereal\types;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\include;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\libs;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\demos.win\sciter-dx;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -151,6 +151,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\AppData\Local\Programs\Python\Python37\include\Python.h" />
+    <ClInclude Include="cereal-1.3.0\cereal-1.3.0\include\cereal\archives\binary.hpp" />
+    <ClInclude Include="cereal-1.3.0\cereal-1.3.0\include\cereal\types\memory.hpp" />
+    <ClInclude Include="cereal-1.3.0\cereal-1.3.0\include\cereal\types\unordered_map.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="memory.h" />
     <ClInclude Include="Resource.h" />
