--- a/SVANN_GUI.vcxproj.filters
+++ b/SVANN_GUI.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClInclude Include="sciter-sdk-master\include\aux-cvt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cereal-1.3.0\cereal-1.3.0\include\cereal\types\unordered_map.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cereal-1.3.0\cereal-1.3.0\include\cereal\types\memory.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cereal-1.3.0\cereal-1.3.0\include\cereal\archives\binary.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SVANN_GUI.cpp">
