--- a/SVANN_GUI.vcxproj
+++ b/SVANN_GUI.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="cereal-1.3.0\cereal-1.3.0\include\cereal\types\unordered_map.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="memory.h" />
+    <ClInclude Include="pipeline.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="sciter-sdk-master\demos.win\sciter-dx\stdafx.h" />
     <ClInclude Include="sciter-sdk-master\include\aux-cvt.h" />
