--- a/SVANN_GUI.vcxproj.filters
+++ b/SVANN_GUI.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="cereal-1.3.0\cereal-1.3.0\include\cereal\archives\binary.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pipeline.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SVANN_GUI.cpp">
