--- a/SVANN_GUI.vcxproj
+++ b/SVANN_GUI.vcxproj
@@ -105,7 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Chase's Laptop\source\repos\SVANN_GUI\cereal-1.3.0\cereal-1.3.0\include\cereal\archives;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\cereal-1.3.0\cereal-1.3.0\include\cereal\types;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\include;C:\Users\Chase's Laptop\AppData\Local\Programs\Python\Python37\libs;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\demos.win\sciter-dx;C:\Users\Chase's Laptop\source\repos\SVANN_GUI\sciter-sdk-master\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\AparimitChandra\anaconda3\libs;C:\Users\AparimitChandra\anaconda3\pkgs\python-3.7.6-h60c2a47_2\include;C:\Users\AparimitChandra\source\repos\SVANN_GUI3\cereal-1.3.0\cereal-1.3.0\include\cereal\archives;C:\Users\AparimitChandra\source\repos\SVANN_GUI3\cereal-1.3.0\cereal-1.3.0\include\cereal\types;C:\Users\AparimitChandra\anaconda3\Lib;C:\Users\AparimitChandra\anaconda3;C:\Users\AparimitChandra\source\repos\SVANN_GUI3\sciter-sdk-master\demos.win\sciter-dx;C:\Users\AparimitChandra\source\repos\SVANN_GUI3\sciter-sdk-master\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
