assembly instructions for selection sort fix

--- a/SVANN_GUI.vcxproj
+++ b/SVANN_GUI.vcxproj
@@ -177,6 +177,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="instructionsTest.txt" />
+    <Text Include="selectionSort.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\AppData\Local\Programs\Python\Python37\python37_d.dll" />
